# cantastorie

./: .classy  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  Makefile  README.md  opencode.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  render.yaml
.claude/skills/documentation-conventions/: SKILL.md
.claude/skills/settled-architecture/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.opencode/skills/pre-commit-check/: SKILL.md
.opencode/skills/story-generation/: SKILL.md
.superpowers/sdd/: task-1-report.md
deploy/: r2-cors.json
docs/: architecture.md  product-spec.md  product.md  setup.md  system-overview.md
docs/adr/: ADR-001-technology-stack.md  ADR-002-narration-provider.md  ADR-003-parent-authentication-clerk.md  ADR-003-workshop-area.md  ADR-004-narration-deepgram-voxtral.md  ADR-004-workshop-area.md  ADR-005-family-voice-narration.md  ADR-005-workshop-area.md  ADR-006-family-voice-narration.md  ADR-006-langsmith-observability.md  ADR-007-langsmith-observability.md  ADR-008-narration-gemini-defaults-mistral-cloning.md  README.md
docs/audits/: ponytail-review.md
docs/design/: design-system.md
docs/plans/: 2026-07-05-pipeline-skeleton.md
docs/superpowers/plans/: 2026-07-08-custom-premise.md  2026-07-11-failure-states.md  2026-07-12-workshop-design.md  2026-07-15-ai-410-mint-or-link-family-token.md
docs/superpowers/specs/: 2026-07-08-custom-premise-design.md  2026-07-12-clerk-parent-auth-family-tenancy-design.md
scripts/: generate_dev_greeting.py  generate_dev_story.py  generate_hero_image.py  repair_manifests.py
src/: __init__.py  config.py  observability.py
src/api/: __init__.py  auth.py  clerk.py  main.py
src/api/routes/: __init__.py  parent.py  player.py  published.py  workshop.py
src/pipeline/: cache.py  cli.py  content_rules.py  generate.py  models.py  providers.py  publish.py
src/pipeline/steps/: assemble.py  illustrate.py  narrate.py  revise.py  safety.py  write.py
src/static/content/en/: manifest.json
src/static/content/en/stories/bruno-birthday-bear/: story.json
src/static/content/en/stories/cosmo-space-cowboy/: story.json
src/static/content/en/stories/pip-the-pirate/: story.json
src/static/content/it/: manifest.json
src/static/content/it/stories/la-barchetta-e-la-luna/: story.json
src/static/css/: player.css  tokens.css  workshop.css
src/static/js/: audio-engine.js  main.js  palette-resolve.js  palette.js  playback.js  prefetch.js  screens.js  store.js  story.js  workshop.js
src/templates/: index.html
src/templates/workshop/: _progress.html  base.html  dashboard.html  login.html  run.html  story.html
src/workshop/: manager.py  records.py
static/: index.html
static/content/it/: manifest.json
static/js/: fsm.js  main.js  screens.js  storage.js
tests/: test_app.py  test_config.py  test_observability.py  test_repair_manifests.py
tests/api/: clerk_jwt.py  test_auth.py  test_clerk_client.py  test_parent_provision.py
tests/e2e/: failure-states.spec.js  playback-loop.spec.js  shelf-caption-below.spec.js  shelf-no-overlap.spec.js  two-tap.spec.js
tests/js/: audio-engine.test.js  fsm.test.js  palette.test.js  playback.test.js  player.test.js  prefetch.test.js  store.test.js  story.test.js
tests/pipeline/: test_assemble.py  test_audit.py  test_authoring_steps.py  test_cache.py  test_cli.py  test_content_rules.py  test_generate.py  test_illustrate.py  test_models.py  test_narrate.py  test_providers.py  test_publish.py
tests/workshop/: test_manager.py  test_records.py  test_routes.py
