[project]
name = "cantastorie"
version = "0.1.0"
description = "Bedtime stories a child steers, told aloud in the languages the family speaks; authored offline, approved by a parent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Abhishek" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Pipeline
    "pydantic-ai>=0.4.0",
    "typer>=0.15.0",
    "httpx>=0.28.0",
    # JWT verification: PyJWT + cryptography for RS256/JWKS (AI-409 identity layer).
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    # Publish: R2 is S3-compatible, reached with boto3
    "boto3>=1.35.0",
    # Observability: LangSmith tracing for the pipeline and FastAPI app
    "langsmith>=0.3.0",
]

[project.scripts]
cantastorie = "src.pipeline.cli:app"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",

    # A fake S3 so publish is proven with zero network
    "moto[s3]>=5.0.0",
    "boto3-stubs[s3]>=1.35.0",

    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Pre-commit
    "pre-commit>=4.0.0",

    # Secrets baseline generation
    "detect-secrets>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic builds validators from annotations at class-creation time, so
# annotation-only imports on BaseModel fields are still runtime imports.
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "langsmith.*"
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
